adicionando imagens slide

--- a/index.html
+++ b/index.html
@@ -6,11 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="slide.js" defer></script>
-    <title>Document</title>
+    <title>Slider com HTML e CSS</title>
 </head>
 
 <body>
-    <h1>testando pc2</h1>
+    <div class="slider">
+        <div class="slides">
+            <!--Radio Buttons-->
+            <input type="radio" name="radio-btn" id="radio1">
+            <input type="radio" name="radio-btn" id="radio2">
+            <input type="radio" name="radio-btn" id="radio3">
+            <input type="radio" name="radio-btn" id="radio4">
+
+            <div class="slide first">
+                <img src="./images/aurora-borealis.jpg" alt="aurora-borealis">
+            </div>
+            <div class="slide">
+                <img src="./images/nature-1.jpg" alt="nature-1">
+            </div>
+            <div class="slide">
+                <img src="./images/nature-2.jpg" alt="nature-2">
+            </div>
+            <div class="slide">
+                <img src="./images/nature-3.jpg" alt="nature-3">
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
