--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <input type="radio" name="radio-btn" id="radio3">
             <input type="radio" name="radio-btn" id="radio4">
 
+            <!--Slide Images-->
             <div class="slide first">
                 <img src="./images/aurora-borealis.jpg" alt="aurora-borealis">
             </div>
@@ -30,6 +31,20 @@
             <div class="slide">
                 <img src="./images/nature-3.jpg" alt="nature-3">
             </div>
+
+            <div class="navigation-auto">
+                <div class="auto-btn1"></div>
+                <div class="auto-btn2"></div>
+                <div class="auto-btn3"></div>
+                <div class="auto-btn4"></div>
+            </div>
+        </div>
+
+        <div class="manual-navigation">
+            <label for="ratio1" class="manual-btn"></label>
+            <label for="ratio2" class="manual-btn"></label>
+            <label for="ratio3" class="manual-btn"></label>
+            <label for="ratio4" class="manual-btn"></label>
         </div>
     </div>
 </body>
