ajustando imagem input radio

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         </div>
 
         <div class="manual-navigation">
-            <label for="ratio1" class="manual-btn"></label>
-            <label for="ratio2" class="manual-btn"></label>
-            <label for="ratio3" class="manual-btn"></label>
-            <label for="ratio4" class="manual-btn"></label>
+            <label for="radio1" class="manual-btn"></label>
+            <label for="radio2" class="manual-btn"></label>
+            <label for="radio3" class="manual-btn"></label>
+            <label for="radio4" class="manual-btn"></label>
         </div>
     </div>
 </body>
